--- a/topologies/create_topolopy.ipynb
+++ b/topologies/create_topolopy.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,117 +99,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/abilene.xml\n",
-      "12\n",
-      "15\n",
       "abilene 12\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/atlanta.xml\n",
-      "15\n",
-      "22\n",
       "atlanta 15\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/brain.xml\n",
-      "161\n",
-      "332\n",
       "brain 161\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/cost266.xml\n",
-      "37\n",
-      "57\n",
       "cost266 37\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/dfn-bwin.xml\n",
-      "10\n",
-      "45\n",
       "dfn-bwin 10\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/dfn-gwin.xml\n",
-      "11\n",
-      "47\n",
       "dfn-gwin 11\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/di-yuan.xml\n",
-      "11\n",
-      "42\n",
       "di-yuan 11\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/france.xml\n",
-      "25\n",
-      "45\n",
       "france 25\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/geant.xml\n",
-      "22\n",
-      "36\n",
       "geant 22\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/germany50.xml\n",
-      "50\n",
-      "88\n",
       "germany50 50\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/giul39.xml\n",
-      "39\n",
-      "172\n",
       "giul39 39\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/india35.xml\n",
-      "35\n",
-      "80\n",
       "india35 35\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/janos-us.xml\n",
-      "26\n",
-      "84\n",
       "janos-us 26\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/janos-us-ca.xml\n",
-      "39\n",
-      "122\n",
       "janos-us-ca 39\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/newyork.xml\n",
-      "16\n",
-      "49\n",
       "newyork 16\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/nobel-eu.xml\n",
-      "28\n",
-      "41\n",
       "nobel-eu 28\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/nobel-germany.xml\n",
-      "17\n",
-      "26\n",
       "nobel-germany 17\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/nobel-us.xml\n",
-      "14\n",
-      "21\n",
       "nobel-us 14\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/norway.xml\n",
-      "27\n",
-      "51\n",
       "norway 27\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/pdh.xml\n",
-      "11\n",
-      "34\n",
       "pdh 11\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/pioro40.xml\n",
-      "40\n",
-      "89\n",
       "pioro40 40\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/polska.xml\n",
-      "12\n",
-      "18\n",
       "polska 12\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/sun.xml\n",
-      "27\n",
-      "102\n",
       "sun 27\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/ta1.xml\n",
-      "24\n",
-      "55\n",
       "ta1 24\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/ta2.xml\n",
-      "65\n",
-      "108\n",
       "ta2 65\n",
-      "Fetching https://sndlib.put.poznan.pl/download/sndlib-networks-xml/zib54.xml\n",
-      "54\n",
-      "81\n",
-      "zib54 54\n"
+      "zib54 54\n",
+      "['abilene', 'atlanta', 'brain', 'cost266', 'dfn-bwin', 'dfn-gwin', 'di-yuan', 'france', 'geant', 'germany50', 'giul39', 'india35', 'janos-us', 'janos-us-ca', 'newyork', 'nobel-eu', 'nobel-germany', 'nobel-us', 'norway', 'pdh', 'pioro40', 'polska', 'sun', 'ta1', 'ta2', 'zib54']\n",
+      "[12, 15, 161, 37, 10, 11, 11, 25, 22, 50, 39, 35, 26, 39, 16, 28, 17, 14, 27, 11, 40, 12, 27, 24, 65, 54]\n"
      ]
     }
    ],
@@ -238,7 +162,7 @@
     "def parse_and_save_adj_matrix(name, save_dir=\"adj_matrices\"):\n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "    url = f\"{BASE_URL}{name}.xml\"\n",
-    "    print(f\"Fetching {url}\")\n",
+    "    # print(f\"Fetching {url}\")\n",
     "    try:\n",
     "        r = requests.get(url)\n",
     "        r.raise_for_status()\n",
@@ -254,8 +178,8 @@
     "\n",
     "        # Map node IDs to 0-based indices\n",
     "        node_id_map = {}\n",
-    "        print(len(node_elements))\n",
-    "        print(len(link_elements))\n",
+    "        # print(len(node_elements))\n",
+    "        # print(len(link_elements))\n",
     "        for idx, node in enumerate(node_elements):\n",
     "            node_id_map[node.attrib['id']] = idx\n",
     "            G.add_node(idx)\n",
@@ -270,16 +194,23 @@
     "        adj_matrix = nx.adjacency_matrix(G).todense()\n",
     "        \n",
     "        print(name, len(adj_matrix))\n",
-    "        with open(f'{len(adj_matrix)}_{name}.pk','wb') as f:\n",
-    "            pickle.dump(G, f)\n",
+    "        # with open(f'{len(adj_matrix)}_{name}.pk','wb') as f:\n",
+    "        #     pickle.dump(G, f)\n",
+    "        return len(adj_matrix)\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"Failed to process {name}: {e}\")\n",
     "\n",
     "def process_all_networks():\n",
+    "    nodes = []\n",
+    "    topo = []\n",
     "    for name in NETWORK_LIST:\n",
-    "        parse_and_save_adj_matrix(name)\n",
+    "        topo.append(name)\n",
+    "        num = parse_and_save_adj_matrix(name)\n",
+    "        nodes.append(num)\n",
     "        time.sleep(0.5)  # polite delay\n",
+    "    print(topo)\n",
+    "    print(nodes)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    process_all_networks()"
