--- a/topologies/create_topolopy.ipynb
+++ b/topologies/create_topolopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +215,71 @@
     "if __name__ == \"__main__\":\n",
     "    process_all_networks()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle as pk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_topofiles = os.listdir()\n",
+    "infos = []\n",
+    "for topof in all_topofiles:\n",
+    "    if '.pk' in topof:\n",
+    "        with open(topof, \"rb\") as f:\n",
+    "            G = pk.load(f)\n",
+    "            num_nodes = G.number_of_nodes()\n",
+    "            num_edges = G.number_of_edges()\n",
+    "            avg_degree = sum(dict(G.degree()).values()) / num_nodes\n",
+    "            density = nx.density(G)\n",
+    "            g_info = [topof, num_nodes, num_edges,avg_degree ,density]\n",
+    "            infos.append(g_info)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(infos, columns=['topo', 'num_nodes', 'num_edges','avg_degree' ,'density'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('topo.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -233,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
